Méthode Prim avec une station en paramètre